# bankapi

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/auth/: authentication.py  oauth2.py
app/db/: database.py  db_account.py  db_card.py  db_tranaction.py  generate_account_num.py  generate_card.py  models.py  state_card.py
app/routers/: account.py  card.py  schemes.py
tests/: conftest.py
tests/unit/: test_bank_system.py
